# pypisync

./: .gitignore  README.md  pypisync.conf  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
src/pypisync/: PypiPackage.py  PypiSync.py  SimpleIndexGenerator.py  XmlRPC.py  __init__.py  __main__.py  memoize.py
src/tests/: PypiSyncTests.py  __init__.py
