[metadata]
name = pypisync
version = 1.0.0
description = Pypi.org Mirroring with dependencies
long_description =  # file: README.rst
url = https://github.com/jpillon/pypisync
author =
author_email =
license = GPLv3
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    pkginfo
    packaging
    tqdm
    pypi-simple
    requests
package_dir =
    =src
packages = find:

[options.packages.find]
where=src
[options.entry_points]
console_scripts =
    pypisync = pypisync.__main__:main
